--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,6 @@ bin/
 
 # Simulation GUI and other tools window save file
 *-window.json
+
+# Dylan added this, please don't remove
+!/src/main/java/frc/robot/
