Swerve Drive working
Updates from the 1/7/2023 saturday meeting.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,5 @@
     },
   ],
   "java.test.defaultConfig": "WPIlibUnitTests",
-  "git.ignoreLimitWarning": true,
-  "wpilib.selectDefaultSimulateExtension": true
+  "git.ignoreLimitWarning": true
 }
