--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,12 @@ def includeDesktopSupport = true
 
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 5.
+repositories {
+   mavenCentral()
+}
 dependencies {
+    implementation 'org.apache.commons:commons-math3:3.6'
+    
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
 
